@@ -53,6 +53,7 @@ TGo4Script::TGo4Script(TGo4MainWindow* mainwin) :
    TGo4AbstractInterface(),
    fiWaitForGUIReaction(0),
    fiWaitCounter(0),
+   fiWait2Counter(0),
    fStrBuf(),
    fMainWin(mainwin),
    fErrorFlag(kFALSE)
@@ -245,7 +246,8 @@ Int_t TGo4Script::execGUICommands()
         TGo4AnalysisProxy* anal = Analysis();
         if ((anal!=0) && anal->IsAnalysisSettingsReady()) {
           fiWaitForGUIReaction = 11;
-          fiWaitCounter = getCounts(20.);
+          fiWaitCounter = fiWait2Counter;
+          fiWait2Counter = 0;
           return 2;
         }
         return (fiWaitCounter<2) ? 0 : 2;
@@ -377,12 +379,13 @@ void TGo4Script::ShutdownAnalysis()
    DoPostProcessing();
 }
 
-void TGo4Script::SubmitAnalysisConfig()
+void TGo4Script::SubmitAnalysisConfig(int tmout)
 {
    fMainWin->SubmitAnalysisSettings();
 
    fiWaitForGUIReaction = 10;
-   fiWaitCounter = getCounts(20.);
+   fiWaitCounter = getCounts(tmout);
+   fiWait2Counter = fiWaitCounter;
 
    DoPostProcessing();
 }
@@ -398,6 +401,19 @@ void TGo4Script::StopAnalysis()
    fMainWin->StopAnalysisSlot();
    Wait(2.);
 }
+
+void TGo4Script::RefreshNamesList(int tmout)
+{
+   TGo4AnalysisProxy* anal = Analysis();
+   if (anal!=0) {
+      anal->RefreshNamesList();
+      fiWaitForGUIReaction = 11;
+      fiWaitCounter = getCounts(tmout > 0 ? tmout : 10);
+   }
+
+   DoPostProcessing();
+}
+
 
 void TGo4Script::SetAnalysisTerminalMode(int mode)
 {
@@ -907,7 +923,7 @@ void TGo4Script::ProduceScript(const char* filename, TGo4MainWindow* main)
    }
 
    if ((anal!=0) && anal->IsAnalysisSettingsReady())
-      fs << "go4->SubmitAnalysisConfig();" << std::endl << std::endl;
+      fs << "go4->SubmitAnalysisConfig(20);" << std::endl << std::endl;
 
    int mode = 1;
    if (confgui) {
